--- a/loader/kernels/makefile
+++ b/loader/kernels/makefile
@@ -121,31 +121,31 @@ $(MYDIR)modesw-npc.asm: .symbolic
 
 $(MYDIR)modesw-npl.asm: .symbolic
 
-$(PATH)modesw-npo.$(O): $(MYDIR)..$(SEP)modesw.asm
+$(PATH)modesw-npo.$(O):: $(MYDIR)..$(SEP)modesw.asm
  @$(SAY) ASM      $^. $(LOG)
  $(verbose)$(ASM) -dNO_PROT -dMB_KERN -dREAL_BASE=0x90000 -dSHIFT=0 $(ASMOPT) -fr=$^*.err -fo=$^@ $[@ $(LOG)
 
-$(PATH)modesw-npc.$(O): $(MYDIR)..$(SEP)modesw.asm
+$(PATH)modesw-npc.$(O):: $(MYDIR)..$(SEP)modesw.asm
  @$(SAY) ASM      $^. $(LOG)
  $(verbose)$(ASM) -dNO_PROT -dMB_KERN -dREAL_BASE=0x90000 -dSHIFT=0 $(ASMOPT) -fr=$^*.err -fo=$^@ $[@ $(LOG)
 
-$(PATH)modesw-npl.$(O): $(MYDIR)..$(SEP)modesw.asm
+$(PATH)modesw-npl.$(O):: $(MYDIR)..$(SEP)modesw.asm
  @$(SAY) ASM      $^. $(LOG)
  $(verbose)$(ASM) -dNO_PROT -dMB_KERN -dREAL_BASE=0x8000 -dSHIFT=0 $(ASMOPT) -fr=$^*.err -fo=$^@ $[@ $(LOG)
 
-$(PATH)modesw-npc.$(SO): $(MYDIR)..$(SEP)modesw.asm
+$(PATH)modesw-npc.$(SO):: $(MYDIR)..$(SEP)modesw.asm
  @$(SAY) ASM      $^. $(LOG)
  $(verbose)$(ASM) -dNO_PROT -dMB_KERN -dREAL_BASE=0x90000 -dSHIFT=$(SHIFT) $(ASMOPT) -fr=$^*.err -fo=$^@ $[@ $(LOG)
 
-$(PATH)modesw-npl.$(SO): $(MYDIR)..$(SEP)modesw.asm
+$(PATH)modesw-npl.$(SO):: $(MYDIR)..$(SEP)modesw.asm
  @$(SAY) ASM      $^. $(LOG)
  $(verbose)$(ASM) -dNO_PROT -dMB_KERN -dREAL_BASE=0x8000 -dSHIFT=$(SHIFT) $(ASMOPT) -fr=$^*.err -fo=$^@ $[@ $(LOG)
 
-$(PATH)biosdisk-c.$(O): $(MYDIR)..$(SEP)preldr$(SEP)biosdisk.asm
+$(PATH)biosdisk-c.$(O):: $(MYDIR)..$(SEP)preldr$(SEP)biosdisk.asm
  @$(SAY) ASM      $^. $(LOG)
  $(verbose)$(ASM) -dMB_KERN -dREAL_BASE=0x90000 -dSHIFT=0 $(ASMOPT) -fr=$^*.err -fo=$^@ $[@ $(LOG)
 
-$(PATH)biosdisk-c.$(SO): $(MYDIR)..$(SEP)preldr$(SEP)biosdisk.asm
+$(PATH)biosdisk-c.$(SO):: $(MYDIR)..$(SEP)preldr$(SEP)biosdisk.asm
  @$(SAY) ASM      $^. $(LOG)
  $(verbose)$(ASM) -dMB_KERN -dREAL_BASE=0x90000 -dSHIFT=$(SHIFT) $(ASMOPT) -fr=$^*.err -fo=$^@ $[@ $(LOG)
 
