--- a/bootsec/fatboot/makefile
+++ b/bootsec/fatboot/makefile
@@ -14,4 +14,4 @@ STARTUP    =
 ALL        = $(p)$(PROJ0)$(e)
 srcfiles   = $(STARTUP) $(ALL)
 
-!include $(%ROOT)/mk/bootsec.mk
+!include $(%ROOT)tools/mk/bootsec.mk
