--- a/loader/loader/makefile
+++ b/loader/loader/makefile
@@ -31,7 +31,7 @@ p            =
 e            = .mdl
 INSTALL      = $+$(ldrfiles)$-
 
-!include $(%ROOT)/mk/loader.mk
+!include $(%ROOT)tools/mk/loader.mk
 
 # note that PATH is changed in loader.mk,
 # so it must be included before this place:
