--- a/bootsec/eltorito/makefile
+++ b/bootsec/eltorito/makefile
@@ -13,4 +13,4 @@ STARTUP    =
 ALL        = $(p)$(PROJ0)$(e)
 srcfiles   = $(STARTUP) $(ALL)
 
-!include $(%ROOT)/mk/bootsec.mk
+!include $(%ROOT)tools/mk/bootsec.mk
