--- a/bootsec/exfat/makefile
+++ b/bootsec/exfat/makefile
@@ -27,7 +27,7 @@ ALL        = $(p)$(PROJ0)$(e)
 
 srcfiles   = $(STARTUP) $(ALL)
 
-!include $(%ROOT)/mk/bootsec.mk
+!include $(%ROOT)tools/mk/bootsec.mk
 
 .asm: $(MYDIR)
 
