--- a/loader/kernels/makefile
+++ b/loader/kernels/makefile
@@ -65,7 +65,7 @@ p            =
 e            = .mdl
 INSTALL      = $+$(kernels)$-
 
-!include $(%ROOT)/mk/loader.mk
+!include $(%ROOT)tools/mk/loader.mk
 
 # note that PATH is changed in loader.mk,
 # so it must be included before this place:
