update submodules branch info

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "freeinst/tpro"]
-	path = freeinst/tpro
-	url = https://github.com/osfree-project/tpro
+        path = freeinst/tpro
+        url = https://github.com/osfree-project/tpro
+        branch = main
